--- a/.buildkite/pipelines/qrc.yml
+++ b/.buildkite/pipelines/qrc.yml
@@ -9,32 +9,55 @@ agents: { queue: "papers" }
 
 env:
   # Builds in e.g. "/build/qtry-3574*"
+  PRH  : ".buildkite/bin/prh.sh /build/prh${BUILDKITE_BUILD_NUMBER}/full_chip"
   QRC  : ".buildkite/bin/qrc.sh /build/qtry${BUILDKITE_BUILD_NUMBER}"
   GOLD : /sim/buildkite-agent/gold/full_chip
   TMP  : /sim/tmp/deleteme-qrctest/full_chip
 
 steps:
+# - label: 'setup'
+#   commands:
+#   - 'test -e $$TMP && /bin/rm -rf $$PRH'
+#   - 'source mflowgen/bin/setup-buildkite.sh --dir $$PRH;
+#      mflowgen run --design $$GARNET_HOME/mflowgen/full_chip'
+# - wait: ~
 
-- label: 'setup'
+- label: 'prh0'
   commands:
-  - 'test -e $$TMP && /bin/rm -rf $$TMP'
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$TMP;
-     mflowgen run --design $$GARNET_HOME/mflowgen/full_chip'
-- wait: ~
-
-# Note: "echo exit 13" prevents hang at genus/innovus prompt, allows clean fail
-- label: 'hold'
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir $$TMP --need_space 70G;
-     echo "+++ MAKE CADENCE-INNOVUS-POSTROUTE_HOLD"; set -o pipefail;
-     set -x;
-     echo $$GOLD/[0-9]*;
-     for s in $$GOLD/[0-9]*; do cp -rp $$s .; done;
-     mv *postroute_hold postroute_hold.orig;
-     echo exit 13 | make -n cadence-innovus-postroute_hold |& tee make-hold.log'
-- wait: ~
+  - 'i=0; set -x; $${PRH}-$${i} || $${PRH}-$${i} || $${PRH}-$${i}
 
 
+# 
+# 
+# # Note: "echo exit 13" prevents hang at genus/innovus prompt, allows clean fail
+# - label: 'hold'
+#   commands:
+#   - 'source mflowgen/bin/setup-buildkite.sh --dir $$TMP --need_space 70G;
+#      echo "+++ MAKE CADENCE-INNOVUS-POSTROUTE_HOLD"; set -o pipefail;
+#      set -x;
+#      echo $$GOLD/[0-9]*;
+#      for s in $$GOLD/[0-9]*; do cp -rp $$s .; done;
+#      mv *postroute_hold postroute_hold.orig;
+#      echo exit 13 | make -n cadence-innovus-postroute_hold |& tee make-hold.log'
+# - wait: ~
+
+
+# gcam 'first prh attempt' ; git push
+
+
+
+
+
+
+
+
+
+
+
+
+########################################################################
+# Original qrc test
+# 
 # - label:    'qrc0'
 #   commands: 'set -x; $${QRC}-0a || $${QRC}-0b || $${QRC}-0c'
 # - label:    'qrc1'
