--- a/.buildkite/pipelines/qrc.yml
+++ b/.buildkite/pipelines/qrc.yml
@@ -16,10 +16,11 @@ steps:
 
   # Makes e.g. /build/prh3598-{0,1}?
   - label: 'prh0'
-    commands: 'i=0; set -x; $${PRH}-$${i}
+    commands: 'i=0; set -x; $${PRH}-$${i}'
   - label: 'prh1'
-    commands: 'i=1; set -x; $${PRH}-$${i}
-  - wait:     { continue_on_failure: true }
+    commands: 'i=1; set -x; $${PRH}-$${i}'
+
+#   - wait:     { continue_on_failure: true }
 
 
 
