radical redesign (again); use symlink instead of stash

--- a/.buildkite/pipelines/qrc.yml
+++ b/.buildkite/pipelines/qrc.yml
@@ -14,11 +14,11 @@ env:
 
 steps:
 
-  # Makes e.g. /build/prh3598-{0,1}?
+  # Makes e.g. /build/prh3598/try[01]?
   - label: 'prh0'
-    commands: 'i=0; set -x; $${PRH}-$${i}'
+    commands: 'i=0; set -x; $${PRH} $${i}'
   - label: 'prh1'
-    commands: 'i=1; set -x; $${PRH}-$${i}'
+    commands: 'i=1; set -x; $${PRH} $${i}'
   - wait:     { continue_on_failure: true }
 
 
