--- a/.buildkite/pipelines/qrc.yml
+++ b/.buildkite/pipelines/qrc.yml
@@ -9,24 +9,38 @@ agents: { queue: "papers" }
 
 env:
 
-  # Builds in e.g. "/build/qtry-3574*"
-  PRH  : ".buildkite/bin/prh.sh /build/prh${BUILDKITE_BUILD_NUMBER}"
+  # Builds in e.g. "/build/prh-3574/{run0,run1,run2...}"
+  PRH       : ".buildkite/bin/prh.sh /build/prh${BUILDKITE_BUILD_NUMBER}"
+  # buildpipe : ".buildkite/prh-pipeline.sh /build/prh3555"
+  buildpipe : ".buildkite/prh-pipeline.sh"
 
 steps:
+  - command: .buildkite/bin/pipeline-prh.sh 1 | buildkite-agent pipeline upload
+    label:   ":pipeline: Upload"
+  - wait: { continue_on_failure: true }
 
-  # Makes e.g. /build/prh3598/try[01]?
-  - label: 'prh0'
-    commands: 'i=0; set -x; $${PRH} $${i} || $${PRH} $${i} || $${PRH} $${i}'
-  - label: 'prh1'
-    commands: 'i=1; set -x; $${PRH} $${i} || $${PRH} $${i} || $${PRH} $${i}'
-  - wait:     { continue_on_failure: true }
+  - command: .buildkite/bin/pipeline-prh.sh 1 | buildkite-agent pipeline upload
+    label:   ":pipeline: Upload"
+  - wait: { continue_on_failure: true }
 
 
-  - label: 'prh2'
-    commands: 'i=2; set -x; $${PRH} $${i} || $${PRH} $${i} || $${PRH} $${i}'
-  - label: 'prh3'
-    commands: 'i=3; set -x; $${PRH} $${i} || $${PRH} $${i} || $${PRH} $${i}'
-  - wait:     { continue_on_failure: true }
+
+
+# steps:
+# 
+#   # Makes e.g. /build/prh3598/run[01]?
+#   - label: 'prh0'
+#     commands: 'i=0; set -x; $${PRH} $${i} || $${PRH} $${i} || $${PRH} $${i}'
+#   - label: 'prh1'
+#     commands: 'i=1; set -x; $${PRH} $${i} || $${PRH} $${i} || $${PRH} $${i}'
+#   - wait:     { continue_on_failure: true }
+# 
+# 
+#   - label: 'prh2'
+#     commands: 'i=2; set -x; $${PRH} $${i} || $${PRH} $${i} || $${PRH} $${i}'
+#   - label: 'prh3'
+#     commands: 'i=3; set -x; $${PRH} $${i} || $${PRH} $${i} || $${PRH} $${i}'
+#   - wait:     { continue_on_failure: true }
 
 
 
