--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ coreir>=2.0.123  # should be first so we get the latest version
 -e git://github.com/joyliu37/BufferMapping#egg=buffer_mapping
 -e git+git://github.com/pyhdi/pyverilog.git#egg=pyverilog
 -e git+https://github.com/StanfordAHA/lake#egg=lake
--e git://github.com/phanrahan/magma.git@fix-uniq-issues#egg=magma-lang
+-e git://github.com/phanrahan/magma.git#egg=magma-lang
 -e git://github.com/phanrahan/mantle.git#egg=mantle
 ordered_set
 cosa
