go big or go home

--- a/.buildkite/pipelines/qrc.yml
+++ b/.buildkite/pipelines/qrc.yml
@@ -17,25 +17,42 @@ steps:
   # Steps run in parallel, pipeline does not continue until both are done.
   # Repeat five times for ten total tests including retries
 
-  - command: '$$BUILDPIPE/run0 | buildkite-agent pipeline upload'
-    label:   "gen1"
+  - label:   "run0"
+    command: '$$BUILDPIPE/run0 | buildkite-agent pipeline upload'
+  - label:   "run1"
+    command: '$$BUILDPIPE/run1 | buildkite-agent pipeline upload'
   - wait: { continue_on_failure: true }
 
-  - command: '$$BUILDPIPE/run1 | buildkite-agent pipeline upload'
-    label:   "gen2"
+  - label:   "run2"
+    command: '$$BUILDPIPE/run2 | buildkite-agent pipeline upload'
+  - label:   "run3"
+    command: '$$BUILDPIPE/run3 | buildkite-agent pipeline upload'
   - wait: { continue_on_failure: true }
 
-  - command: '$$BUILDPIPE/run2 | buildkite-agent pipeline upload'
-    label:   "gen3"
+  - label:   "run4"
+    command: '$$BUILDPIPE/run4 | buildkite-agent pipeline upload'
+  - label:   "run5"
+    command: '$$BUILDPIPE/run5 | buildkite-agent pipeline upload'
   - wait: { continue_on_failure: true }
 
-  - command: '$$BUILDPIPE/run3 | buildkite-agent pipeline upload'
-    label:   "gen4"
+  - label:   "run6"
+    command: '$$BUILDPIPE/run6 | buildkite-agent pipeline upload'
+  - label:   "run7"
+    command: '$$BUILDPIPE/run7 | buildkite-agent pipeline upload'
   - wait: { continue_on_failure: true }
 
-  - command: '$$BUILDPIPE/run4 | buildkite-agent pipeline upload'
-    label:   "gen5"
+  - label:   "run8"
+    command: '$$BUILDPIPE/run8 | buildkite-agent pipeline upload'
+  - label:   "run9"
+    command: '$$BUILDPIPE/run9 | buildkite-agent pipeline upload'
   - wait: { continue_on_failure: true }
+
+
+
+
+
+
+
 
 
 
