cleared for final approach

--- a/.buildkite/pipeline_fullchip.yml
+++ b/.buildkite/pipeline_fullchip.yml
@@ -92,51 +92,39 @@ steps:
      make cadence-innovus-postroute |& tee make-postroute.log'
 - wait: ~
 
+########################################################################
+# postroute_hold fails occasionally, thus all this infrastructure for retry.
+# 
+# "prh.sh" does the following:
+#   - if step "*-postroute_hold" exists already, do nothing and exit 0
+#   - if step does not exist yet, build it
+#   - if build fails, rename step to <step>-fail<i> and exit 13
 
-
-
-
-
-# Note: "echo exit 13" prevents hang at genus/innovus prompt, allows clean fail
-- label: 'hold'
+# postroute_hold, retry if fail
+- label:   "hold1"
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
-     echo "--- MAKE CADENCE-INNOVUS-POSTROUTE_HOLD"; set -o pipefail;
-     echo exit 13 | make cadence-innovus-postroute_hold |& tee make-hold.log'
+     echo "--- MAKE CADENCE-INNOVUS-POSTROUTE_HOLD - FIRST ATTEMPT";
+     .buildkite/bin/prh.sh $$GOLD'
+- wait: { continue_on_failure: true }
+
+# first retry, continue with another retry on failure
+- label:   "hold2"
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
+     echo "--- MAKE CADENCE-INNOVUS-POSTROUTE_HOLD - SECOND ATTEMPT";
+     .buildkite/bin/prh.sh $$GOLD'
+- wait: { continue_on_failure: true }
+
+# Final postroute_hold attempt, fail pipeline if this one bombs
+- label:   "hold3"
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
+     echo "--- MAKE CADENCE-INNOVUS-POSTROUTE_HOLD - SECOND ATTEMPT";
+     .buildkite/bin/prh.sh $$GOLD'
 - wait: ~
 
-
-# postroute_hold fails occasionally, thus all this infrastructure for retry.
-
-  # "buildpipe" does the following (i think):
-  # - if postroute_hold does not exist yet, build it
-  # - if postroute_hold does exist, do nothing (further) and exit
-  # - if postroute_hold.fail1 exists, try again with a new build
-  # - if postroute_hold.fail2 exists, try again with a new build
-  # - if postroute_hold.fail3 exists, give up and exit with error to halt pipeline
-
-
-
-
-  commands:
-  - 'buildpipe=.buildkite/bin/prh-onestep.sh $$GOLD;
-     $$buildpipe | buildkite-agent pipeline upload'
-
-
-source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
-     echo "--- MAKE CADENCE-INNOVUS-POSTROUTE_HOLD"; set -o pipefail;
-     echo exit 13 | make cadence-innovus-postroute_hold |& tee make-hold.log'
-
-
-
-
-
-
-
-
-
-
-
+########################################################################
 - label: 'lvs'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 61G;
@@ -144,6 +132,7 @@ source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
      make mentor-calibre-lvs |& tee make-lvs.log'
 - wait: ~
 
+########################################################################
 # Not sure if this is ever useful...
 # - label: 'drc'
 #   commands:
@@ -151,4 +140,14 @@ source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
 #      echo "--- MAKE MENTOR-CALIBRE-DRC"; set -o pipefail;
 #      make mentor-calibre-drc |& tee make-drc.log'
 # - wait: ~
+
+# OLD postroute_hold
+# # Note: "echo exit 13" prevents hang at genus/innovus prompt, allows clean fail
+# - label: 'hold'
+#   commands:
+#   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
+#      echo "--- MAKE CADENCE-INNOVUS-POSTROUTE_HOLD"; set -o pipefail;
+#      echo exit 13 | make cadence-innovus-postroute_hold |& tee make-hold.log'
+# - wait: ~
+
 
