--- a/.buildkite/pipelines/qrc.yml
+++ b/.buildkite/pipelines/qrc.yml
@@ -15,22 +15,38 @@ env:
 steps:
   - label:   "tst0"
     # command: '$$BUILDPIPE/tst0'
-    command: 'sleep 13; exit 13'
+    command: 'sleep 4; exit 13'
     key: "0a"
 
   - label:   "tst0"
-    command: 'sleep 13; exit 13'
+    command: 'sleep 4; exit 13'
     key: "0b"
-    depends_on:
-      - step: 0a
-        allow_failure: true
+    depends_on: { step: 0a , allow_failure: true }
 
   - label:   "tst0"
-    command: 'sleep 13; exit 0'
+    command: 'sleep 4; exit 0'
     key: "0c"
     depends_on:
       - step: 0b
-        allow_failure: true
+
+
+  - label:   "tst1"
+    # command: '$$BUILDPIPE/tst1'
+    command: 'sleep 4; exit 13'
+    key: "1a"
+
+  - label:   "tst1"
+    command: 'sleep 4; exit 13'
+    key: "1b"
+    depends_on: { step: 1a , allow_failure: true }
+
+  - label:   "tst1"
+    command: 'sleep 4; exit 1'
+    key: "1c"
+    depends_on:
+      - step: 1b
+
+
 
 
 
