--- a/.buildkite/pipelines/qrc.yml
+++ b/.buildkite/pipelines/qrc.yml
@@ -21,13 +21,14 @@ steps:
   - label:   "tst0"
     command: 'sleep 4; exit 13'
     key: "0b"
-    depends_on: { step: 0a , allow_failure: true }
+    depends_on: [ { step: 0a , allow_failure: true } ]
 
   - label:   "tst0"
     command: 'sleep 4; exit 0'
     key: "0c"
     depends_on:
       - step: 0b
+        allow_failure: true
 
 
   - label:   "tst1"
@@ -38,7 +39,9 @@ steps:
   - label:   "tst1"
     command: 'sleep 4; exit 13'
     key: "1b"
-    depends_on: [ { step: 1a , allow_failure: true } ]
+    depends_on:
+      - step: 1a
+        allow_failure: true
 
   - label:   "tst1"
     command: 'sleep 4; exit 1'
